# lunar-router

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN_P15.3.1.md  PLAN_P15.3.10.md  PLAN_P15.3.2.md  PLAN_P15.3.3.md  PLAN_P15.3.4.md  PLAN_P15.3.5.md  PLAN_P15.3.6.md  PLAN_P15.3.7.md  PLAN_P15.3.8.md  PLAN_P15.3.9.md  PLAN_P15.4.1.md  PLAN_P15.4.2.md  PLAN_P16.1.md  PLAN_P16.2.md  PLAN_P16.3.md  README.md  ROADMAP_P15.3.md  ROADMAP_P15.4.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent/: agent.yaml
agent/pipeline/: rerank.yaml  retrieve.yaml  route.yaml
agent/prompts/: system.md
backend/: README.md  package-lock.json  package.json  tsconfig.json
backend/api/: server.ts
backend/auth/: api_key.ts  feature.ts  proxy_headers.ts  session.ts  tenant.ts
backend/orchestrator/: runtime_client.ts
clickhouse/: init.sql
config/: README.md  claude_code.yaml
connectors/: README.md
corpora/: README.md  __init__.py  ingest.py  store.py
corpora/tests/: test_ingest_and_store.py
datasets/: _registry.json
datasets/goldens/: v0.json  v1.json
docs/: harness_architecture.excalidraw  harness_redesign.md  multi-tenant.md  verification-email-template.html
evals/: README.md  __init__.py  loader.py  types.py
evals/golden/: golden_001.yaml  golden_002.yaml  golden_003.yaml  golden_004.yaml  golden_005.yaml  golden_006.yaml  golden_007.yaml  golden_008.yaml
evals/reports/: cand_cand_20260508T050652_2c93.json  cand_cand_20260508T050652_e1e4.json  cand_cand_20260508T060116_b047.json  cand_cand_20260508T060117_b34a.json  cand_cand_20260508T061626_26ac.json  cand_cand_20260508T061627_315b.json  smoke_v0_20260507T205138794Z.json  smoke_v0_20260508T054410541Z.json  smoke_v0_20260508T214610607Z.json  smoke_v0_20260508T214620339Z.json  smoke_v0_20260509T222045911Z.json
evals/rubrics/: __init__.py  base.py  builtins.py
evals/runners/: __init__.py  __main__.py  runner.py
evals/suites/: smoke_v0.yaml
evals/tests/: test_loader_dataset.py
experiments/: README.md  __init__.py  __main__.py  branching.py  runner.py  types.py
experiments/results/: 2026-05-07.jsonl  2026-05-08.jsonl
go/: Dockerfile
harness/: README.md  __init__.py  __main__.py  loop.py  types.py
harness/approver/: __init__.py  policy.py
harness/brain/: transport.py
harness/claude_code/: program.md
harness/critics/: __init__.py  base.py  builtins.py  dataset_critic.py  router_critic.py
harness/executor/: __init__.py  promote.py  voices.yaml
harness/introspection/: __init__.py  agent.py  lib.py  mcp_server.py  tools.py
harness/observability/: __init__.py  __main__.py  distillation.py  types.py
harness/proposer/: __init__.py  dataset_proposer.py  heuristic.py  router_proposer.py  router_psi_compute.py
harness/rollback/: __init__.py  rollback.py
harness/tests/: test_apply_router_candidate.py  test_dataset_critic.py  test_dataset_proposer.py  test_kind_from_mutations.py  test_promote_dataset.py  test_propose_router_pipeline.py  test_router_critic.py
harness/wakeup/: prompt.py  runner.py  scheduler.py
harness/watchers/: auto_rollback.py
infra/restate/: README.md  docker-compose.yaml  serve.py  services.py
ledger/: README.md  __init__.py  types.py  versioning.py  writer.py
lunar/: README.md  docker-compose.yml  run.sh
lunar/router-core/: README.md  pyproject.toml
lunar/router-core/router_core/: __init__.py  error_classifier.py  planner.py
lunar/router-core/router_core/adapters/: __init__.py  base.py  litellm_adapter.py  mock_adapter.py
lunar/router-core/router_core/cache/: __init__.py  pricing_cache.py  ranking_cache.py
lunar/router-core/router_core/models/: __init__.py  schemas.py
lunar/router-core/router_core/providers/: __init__.py  base.py
lunar/router-core/tests/: __init__.py
lunar_router/: __init__.py  cli.py  engine.py  loader.py  requirements-train.txt  sdk.py  weights.py
ml/: README.md
notebooks/: 01_quickstart.ipynb  02_drop_in_openai.ipynb  03_semantic_routing.ipynb  04_ticket_classifier.ipynb  05_distillation.ipynb  06_distilled_inference.ipynb  basic_router_to_self_learning.ipynb  distilled_deployment_inference.ipynb  engine_real_cases.ipynb  evaluation_framework.ipynb  sdk_examples.ipynb  sdk_v0_1_0_tour.ipynb  test_lunar_router.ipynb
opentracy/: __init__.py  _distill.py  cli.py  engine.py  loader.py  sdk.py  student.py  weights.py
policies/: README.md  auto_approve.yaml
router/: __init__.py  config_io.py  errors.py  uniroute.py
runtime/: README.md  __init__.py  __main__.py  agent_context.py  cost.py  dotenv.py  embedder_pool.py  protocols.py  server.py  tenant_context.py  types.py
scripts/: package_weights.py  seed_traces.py
techniques/: README.md  __init__.py
tests/: test_api_dataset_defaults.py  test_api_harness_ledger.py  test_api_harness_proposals.py  test_api_harness_time_series.py  test_autotraining.py  test_azure_provider.py  test_core.py  test_data.py  test_distill.py  test_distillation_rebrand.py  test_evaluation.py  test_harness_actions.py  test_harness_cadence_sensor.py  test_harness_critic_gate.py  test_harness_evaluate_distillation_e2e.py  test_harness_ledger.py  test_harness_mcp_server.py  test_harness_objectives.py  test_harness_policies.py  test_harness_rebrand.py  test_harness_run_clustering_action.py  test_harness_sensors.py  test_harness_suggest_metrics_e2e.py  test_harness_tasks.py  test_harness_trace_scanner_ledger.py  test_harness_traces_threshold_sensor.py  test_harness_training_advisor_ledger.py  test_harness_trigger_engine.py  test_harness_trigger_runner.py  test_harness_writes.py  test_hub.py  test_integration.py  test_models.py  test_router.py  test_sdk_fixes.py  test_weights.py
tools/: migrate_goldens_to_dataset.py  migrate_secrets_to_kms.py  populate_response_cache.py
traces/: README.md
ui/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
versions/: router_config_v0.json
(+737 files in other folders)
