[project]
name = "opentracy-new-mode"
version = "0.0.1"
description = "Self-improving AI agent harness"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
rag = ["faiss-cpu>=1.8", "numpy>=1.26"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runtime", "techniques"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
