[project]
name = "opentracy-new-mode"
version = "0.0.1"
description = "Self-improving AI agent harness"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.0.0",
    "anthropic>=0.40",
    "duckdb>=1.1",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
rag = ["faiss-cpu>=1.8", "numpy>=1.26"]
dev = ["pytest>=8.0", "ruff>=0.5"]
# Only needed to run infra/restate/serve.py (the daily compactor scheduler).
# Stays out of the default dependency set so the runtime + harness don't pull
# in a Restate dep they never import.
infra = ["restate-sdk>=0.7", "hypercorn>=0.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runtime", "techniques"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
